Updated home page gallery

--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@
       <div class="row no-gutters">
         <div class="col-md-6 col-lg-4">
           <div class="package-program ftco-animate">
+            <a href="images/portfolio/seehundvariations.png"
+              class="gallery image-popup img d-flex justify-content-center align-items-center"
+              style="background-image: url(images/portfolio/seehund.png);">
+              <div class="text p-5 text-center">
+                <h3>Seehund</h3>
+                <p>Logo for a cloud navtive blogging platform. 'Seehund' in German means 'seal'.</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4">
+          <div class="package-program ftco-animate">
             <a href="images/portfolio/supremeclaritypromo.png"
               class="gallery image-popup img d-flex justify-content-center align-items-center"
               style="background-image: url(images/portfolio/supremeclarity.png);">
@@ -91,18 +103,6 @@
               <div class="text p-5 text-center">
                 <h3>The Visitor</h3>
                 <p>Book cover for a lesbian family drama.</p>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <div class="package-program ftco-animate">
-            <a href="images/portfolio/forwantofarose.png"
-              class="gallery image-popup img d-flex justify-content-center align-items-center"
-              style="background-image: url(images/portfolio/forwantofarose.png);">
-              <div class="text p-5 text-center">
-                <h3>For Want of a Rose</h3>
-                <p>Cover for a fantasy romance book with the themes of roses and winter.</p>
               </div>
             </a>
           </div>
