--- a/blog.html
+++ b/blog.html
@@ -178,9 +178,12 @@
       <div class="row">
         <div class="col-md-12 text-center">
           <p>
+            Bygrove Studio is a trading name of Ursa & Bygrove Ltd, company registered in England No 13215102, 483 Green Lanes, London N13 4BS.
+          </p>
+          <p>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             Copyright &copy;
-            <script>document.write(new Date().getFullYear());</script> All rights reserved &nbsp; | &nbsp; Designed with
+            <script>document.write(new Date().getFullYear());</script> All rights reserved &nbsp; | &nbsp; <a href="privacy-policy.html">Privacy Policy</a> &nbsp; | &nbsp; Designed with
             <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
           </p>
