Updated address in the footer

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -82,7 +82,7 @@
     
             <p>Bygrove Studio is a trading name of Ursa & Bygrove Ltd, a company registered in England.</p>
             <p>Company No: 13215102</p>
-            <p>Registered address: 483 Green Lanes, London N13 4BS.</p>
+            <p>Registered address: 1 Richmond Road, Lytham St. Annes, FY8 1PE.</p>
   
           </div>
         </div>
@@ -122,7 +122,7 @@
       <div class="row">
         <div class="col-md-12 text-center">
           <p>
-            Bygrove Studio is a trading name of Ursa & Bygrove Ltd, company registered in England No 13215102, 483 Green Lanes, London N13 4BS.
+            Bygrove Studio is a trading name of Ursa & Bygrove Ltd, company registered in England No 13215102, 1 Richmond Road, Lytham St. Annes, FY8 1PE.
           </p>
           <p>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
