--- a/blog-db-double-exposure.html
+++ b/blog-db-double-exposure.html
@@ -92,7 +92,7 @@
       <div class="row">
         <div class="col-md-12 text-center">
           <p>
-            Bygrove Studio is a trading name of Ursa & Bygrove Ltd, company registered in England No 13215102, 483 Green Lanes, London N13 4BS.
+            Bygrove Studio is a trading name of Ursa & Bygrove Ltd, company registered in England No 13215102, 1 Richmond Road, Lytham St. Annes, FY8 1PE.
           </p>
           <p>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
