--- a/resources.html
+++ b/resources.html
@@ -149,22 +149,25 @@
       </section>
     
 
-  <footer class="ftco-footer ftco-section img">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <p>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;
-            <script>document.write(new Date().getFullYear());</script> All rights reserved &nbsp; | &nbsp; Designed with
-            <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          </p>
+      <footer class="ftco-footer ftco-section img">
+        <div class="overlay"></div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 text-center">
+              <p>
+                Bygrove Studio is a trading name of Ursa & Bygrove Ltd, company registered in England No 13215102, 1 Richmond Road, Lytham St. Annes, FY8 1PE.
+              </p>
+              <p>
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                Copyright &copy;
+                <script>document.write(new Date().getFullYear());</script> All rights reserved &nbsp; | &nbsp; <a href="privacy-policy.html">Privacy Policy</a> &nbsp; | &nbsp; Designed with
+                <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+              </p>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-  </footer>
+      </footer>
 
 
 
