Updated footer, again

--- a/blog.html
+++ b/blog.html
@@ -178,7 +178,7 @@
       <div class="row">
         <div class="col-md-12 text-center">
           <p>
-            Bygrove Studio is a trading name of Ursa & Bygrove Ltd, company registered in England No 13215102, 1 Richmond Road, Lytham St. Annes, FY8 1PE.
+            Bygrove Studio is a trading name of Ursa & Bygrove Ltd, registered in England No 13215102, 1 Richmond Road, Lytham St. Annes, FY8 1PE.
           </p>
           <p>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
