--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			</div>
 			<div class="filters">
 				<ul>
-					<li class="active" data-filter="*">All</li>
+					<li data-filter="*">All</li>
 					<li data-filter=".fiction">Fiction</li>
 					<li data-filter=".non-fiction">Non-fiction</li>
 					<li data-filter=".other">Other</li>
