Fixed class names for portfolio popups

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p31.png" alt="">
 							</div>
-							<a href="images/p31.png" class="img-pop-up">
+							<a href="images/p31.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -99,7 +99,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p9.png" alt="">
 							</div>
-							<a href="images/p9.png" class="img-pop-up">
+							<a href="images/p9.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -116,7 +116,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p2.png" alt="">
 							</div>
-							<a href="images/p2.png" class="img-pop-up">
+							<a href="images/p2.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -133,7 +133,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p3.png" alt="">
 							</div>
-							<a href="images/p3.png" class="img-pop-up">
+							<a href="images/p3.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -151,7 +151,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p17.png" alt="">
 							</div>
-							<a href="images/p17.png" class="img-pop-up">
+							<a href="images/p17.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -168,7 +168,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p27.png" alt="">
 							</div>
-							<a href="images/p27.png" class="img-pop-up">
+							<a href="images/p27.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -185,7 +185,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p13.png" alt="">
 							</div>
-							<a href="images/p13.png" class="img-pop-up">
+							<a href="images/p13.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -202,7 +202,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p45.png" alt="">
 							</div>
-							<a href="images/p45.png" class="img-pop-up">
+							<a href="images/p45.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -219,7 +219,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p4.png" alt="">
 							</div>
-							<a href="images/p4.png" class="img-pop-up">
+							<a href="images/p4.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -236,7 +236,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p49.png" alt="">
 							</div>
-							<a href="images/p49.png" class="img-pop-up">
+							<a href="images/p49.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -254,7 +254,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p6.png" alt="">
 							</div>
-							<a href="images/p6.png" class="img-pop-up">
+							<a href="images/p6.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -271,7 +271,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p41.png" alt="">
 							</div>
-							<a href="images/p41.png" class="img-pop-up">
+							<a href="images/p41.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -288,7 +288,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p30.png" alt="">
 							</div>
-							<a href="images/p30.png" class="img-pop-up">
+							<a href="images/p30.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -305,7 +305,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p23.png" alt="">
 							</div>
-							<a href="images/p23.png" class="img-pop-up">
+							<a href="images/p23.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -322,7 +322,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p5.png" alt="">
 							</div>
-							<a href="images/p5.png" class="img-pop-up">
+							<a href="images/p5.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -341,7 +341,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p18.png" alt="">
 							</div>
-							<a href="images/p18.png" class="img-pop-up">
+							<a href="images/p18.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -358,7 +358,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p19.png" alt="">
 							</div>
-							<a href="images/p19.png" class="img-pop-up">
+							<a href="images/p19.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -375,7 +375,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p37.png" alt="">
 							</div>
-							<a href="images/p37.png" class="img-pop-up">
+							<a href="images/p37.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -392,7 +392,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p40.png" alt="">
 							</div>
-							<a href="images/p40.png" class="img-pop-up">
+							<a href="images/p40.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -409,7 +409,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p8.png" alt="">
 							</div>
-							<a href="images/p8.png" class="img-pop-up">
+							<a href="images/p8.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -427,7 +427,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p28.png" alt="">
 							</div>
-							<a href="images/p28.png" class="img-pop-up">
+							<a href="images/p28.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -444,7 +444,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p11.png" alt="">
 							</div>
-							<a href="images/p11.png" class="img-pop-up">
+							<a href="images/p11.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -461,7 +461,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p12.png" alt="">
 							</div>
-							<a href="images/p12.png" class="img-pop-up">
+							<a href="images/p12.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -478,7 +478,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p14.png" alt="">
 							</div>
-							<a href="images/p14.png" class="img-pop-up">
+							<a href="images/p14.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -495,7 +495,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p15.png" alt="">
 							</div>
-							<a href="images/p15.png" class="img-pop-up">
+							<a href="images/p15.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -512,7 +512,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p16.png" alt="">
 							</div>
-							<a href="images/p16.png" class="img-pop-up">
+							<a href="images/p16.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -529,7 +529,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p20.png" alt="">
 							</div>
-							<a href="images/p21.png" class="img-pop-up">
+							<a href="images/p21.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -546,7 +546,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p21.png" alt="">
 							</div>
-							<a href="images/p21.png" class="img-pop-up">
+							<a href="images/p21.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -563,7 +563,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p22.png" alt="">
 							</div>
-							<a href="images/p22.png" class="img-pop-up">
+							<a href="images/p22.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -580,7 +580,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p24.png" alt="">
 							</div>
-							<a href="images/p24.png" class="img-pop-up">
+							<a href="images/p24.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -597,7 +597,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p25.png" alt="">
 							</div>
-							<a href="images/p25.png" class="img-pop-up">
+							<a href="images/p25.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -614,7 +614,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p26.png" alt="">
 							</div>
-							<a href="images/p26.png" class="img-pop-up">
+							<a href="images/p26.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -631,7 +631,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p29.png" alt="">
 							</div>
-							<a href="images/p29.png" class="img-pop-up">
+							<a href="images/p29.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -648,7 +648,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p32.png" alt="">
 							</div>
-							<a href="images/p32.png" class="img-pop-up">
+							<a href="images/p32.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -665,7 +665,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p33.png" alt="">
 							</div>
-							<a href="images/p33.png" class="img-pop-up">
+							<a href="images/p33.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -682,7 +682,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p34.png" alt="">
 							</div>
-							<a href="images/p34.png" class="img-pop-up">
+							<a href="images/p34.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -699,7 +699,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p35.png" alt="">
 							</div>
-							<a href="images/p35.png" class="img-pop-up">
+							<a href="images/p35.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -716,7 +716,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p36.png" alt="">
 							</div>
-							<a href="images/p36.png" class="img-pop-up">
+							<a href="images/p36.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -733,7 +733,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p38.png" alt="">
 							</div>
-							<a href="images/p38.png" class="img-pop-up">
+							<a href="images/p38.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -750,7 +750,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p39.png" alt="">
 							</div>
-							<a href="images/p39.png" class="img-pop-up">
+							<a href="images/p39.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -767,7 +767,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p10.png" alt="">
 							</div>
-							<a href="images/p10.png" class="img-pop-up">
+							<a href="images/p10.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -784,7 +784,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p47.png" alt="">
 							</div>
-							<a href="images/p47.png" class="img-pop-up">
+							<a href="images/p47.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -801,7 +801,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p42.png" alt="">
 							</div>
-							<a href="images/p42.png" class="img-pop-up">
+							<a href="images/p42.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -818,7 +818,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p43.png" alt="">
 							</div>
-							<a href="images/p43.png" class="img-pop-up">
+							<a href="images/p43.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -835,7 +835,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p44.png" alt="">
 							</div>
-							<a href="images/p44.png" class="img-pop-up">
+							<a href="images/p44.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -852,7 +852,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p46.png" alt="">
 							</div>
-							<a href="images/p46.png" class="img-pop-up">
+							<a href="images/p46.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -869,7 +869,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p48.png" alt="">
 							</div>
-							<a href="images/p48.png" class="img-pop-up">
+							<a href="images/p48.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -886,7 +886,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p50.png" alt="">
 							</div>
-							<a href="images/p50.png" class="img-pop-up">
+							<a href="images/p50.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -903,7 +903,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p1.png" alt="">
 							</div>
-							<a href="images/p1.jpg" class="img-pop-up">
+							<a href="images/p1.jpg" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -920,7 +920,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p7.png" alt="">
 							</div>
-							<a href="images/p7.png" class="img-pop-up">
+							<a href="images/p7.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
