Updated thumbnail size

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p31.png" alt="">
+								<img class="image img-fluid" src="images/p31-thumb.png" alt="">
 							</div>
 							<a href="images/p31.png" class="image-popup">
 								<div class="middle">
